# libsip

./: .gitignore  .travis.yml  Cargo.toml  License.md  Readme.md  appeyor.yml  appveyor.yml  rustfmt.toml
examples/: console.rs  registration.rs  udp_register.rs
src/: codec.rs  lib.rs  macros.rs  parse.rs  registration.rs  request.rs  response.rs
src/builder/: config.rs  mod.rs
src/client/: invite.rs  messaging.rs  mod.rs  registration.rs
src/core/: code.rs  errors.rs  event_request_ext.rs  extract.rs  message.rs  message_ext.rs  method.rs  mod.rs  parse.rs  register_request_ext.rs  request_ext.rs  transport.rs  version.rs
src/headers/: auth.rs  contact.rs  content.rs  language.rs  mod.rs  named.rs  parse.rs  sub_state.rs  subscription_state.rs  via.rs  write.rs
src/uri/: auth.rs  domain.rs  mod.rs  params.rs  schema.rs
tests/: message.rs  request.rs  response.rs  tests.rs  version.rs
tests/core/: invalid.rs  message.rs  mod.rs  request.rs  response.rs  version.rs
tests/headers/: allow.rs  authorization.rs  callid.rs  cseq.rs  date.rs  expires.rs  max_forwards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  record_route.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  unsupported.rs  useragent.rs  via.rs  warning.rs  www_authenticate.rs
tests/headers/accept/: encoding.rs  lang.rs  mod.rs
tests/headers/content/: disposition.rs  encoding.rs  lang.rs  length.rs  mod.rs  ty.rs
tests/headers/info/: alert_info.rs  auth_info.rs  call_info.rs  err_info.rs  mod.rs
tests/headers/named/: contact.rs  from.rs  in_reply_to.rs  mod.rs  reply_to.rs  to.rs
tests/headers/proxy/: auth.rs  authorization.rs  mod.rs  require.rs
tests/uri/: auth.rs  domain.rs  mod.rs  uri.rs
