[package]
name = "libsip"
version = "0.2.2"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"
readme = "Readme.md"
license-file = "License.md"
keywords = ["sip", "voip"]
documentation = "https://docs.rs/libsip"
homepage = "https://github.com/Bytebuddha/libsip"
repository = "https://github.com/Bytebuddha/libsip"
description = "SIP protocol Implementation, with a focus towords softphone clients."

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
nom = "5.0.1"
rand = "0.7.2"
sha = "1.0.3"
md5 = "0.7.0"

[dev-dependencies]
tokio = { version = "0.2.3", features = ["net", "macros", "time"] }
