[package]
name = "libsip"
version = "0.2.4"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"
readme = "Readme.md"
license-file = "License.md"
keywords = ["sip", "voip"]
documentation = "https://docs.rs/libsip"
homepage = "https://github.com/ByteHeathen/libsip"
repository = "https://github.com/ByteHeathen/libsip"
description = "SIP protocol Implementation, with a focus towords softphone clients."

[dependencies]
serde = { version = "1.0.107", features = ["derive"] }
nom = "6.0.0-alpha1"
rand = "0.7.3"
sha = "1.0.3"
md5 = "0.7.0"

[dev-dependencies]
tokio = { version = "0.2.20", features = ["net", "macros", "time"] }
